[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/To-Do/SRC/Main.gd" type="Script" id=1]
[ext_resource path="res://addons/To-Do/Icons/Add.svg" type="Texture" id=2]
[ext_resource path="res://addons/To-Do/SRC/Focus Timer.gd" type="Script" id=3]

[node name="To-Do" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 400 )
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
drag_to_rearrange_enabled = true

[node name="Tasks" type="Tabs" parent="TabContainer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
drag_to_rearrange_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Tasks"]
anchor_right = 1.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="TaskEdit" type="LineEdit" parent="TabContainer/Tasks/HBoxContainer"]
unique_name_in_owner = true
margin_right = 1207.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
clear_button_enabled = true
placeholder_text = "Enter Task"

[node name="AddButton" type="Button" parent="TabContainer/Tasks/HBoxContainer"]
margin_left = 1211.0
margin_right = 1272.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
icon = ExtResource( 2 )
icon_align = 1
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Tasks"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 75.0
scroll_horizontal_enabled = false

[node name="TasksVBox" type="VBoxContainer" parent="TabContainer/Tasks/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1272.0
margin_bottom = 609.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Notes" type="Tabs" parent="TabContainer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
drag_to_rearrange_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Notes"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NewNoteButton" type="Button" parent="TabContainer/Notes/VBoxContainer"]
margin_left = 607.0
margin_right = 665.0
margin_bottom = 22.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "New"
icon = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Notes/VBoxContainer"]
margin_top = 26.0
margin_right = 1272.0
margin_bottom = 684.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NotesVBox" type="VBoxContainer" parent="TabContainer/Notes/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1272.0
margin_bottom = 658.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Focus Timer" type="Tabs" parent="TabContainer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
drag_to_rearrange_enabled = true
script = ExtResource( 3 )

[node name="TaskName" type="LineEdit" parent="TabContainer/Focus Timer"]
unique_name_in_owner = true
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.15
grow_horizontal = 2
grow_vertical = 2
expand_to_text_length = true
placeholder_text = "Enter Task Name"
caret_blink = true

[node name="StartFocus" type="Button" parent="TabContainer/Focus Timer"]
unique_name_in_owner = true
anchor_left = 0.4
anchor_top = 0.65
anchor_right = 0.6
anchor_bottom = 0.8
text = "Start Focus"

[node name="FocusTypes" type="TabContainer" parent="TabContainer/Focus Timer"]
unique_name_in_owner = true
anchor_left = 0.2
anchor_top = 0.25
anchor_right = 0.8
anchor_bottom = 0.6

[node name="Timer" type="Tabs" parent="TabContainer/Focus Timer/FocusTypes"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
drag_to_rearrange_enabled = true
__meta__ = {
"_tab_disabled": false
}

[node name="Time" type="HBoxContainer" parent="TabContainer/Focus Timer/FocusTypes/Timer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Hours" type="SpinBox" parent="TabContainer/Focus Timer/FocusTypes/Timer/Time"]
unique_name_in_owner = true
margin_right = 249.0
margin_bottom = 203.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_greater = true
align = 1
suffix = "hour"

[node name="Minutes" type="SpinBox" parent="TabContainer/Focus Timer/FocusTypes/Timer/Time"]
unique_name_in_owner = true
margin_left = 253.0
margin_right = 502.0
margin_bottom = 203.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 60.0
align = 1
suffix = "minute"

[node name="Seconds" type="SpinBox" parent="TabContainer/Focus Timer/FocusTypes/Timer/Time"]
unique_name_in_owner = true
margin_left = 506.0
margin_right = 755.0
margin_bottom = 203.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 60.0
align = 1
suffix = "second"

[node name="Free Focus" type="Tabs" parent="TabContainer/Focus Timer/FocusTypes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
drag_to_rearrange_enabled = true
__meta__ = {
"_tab_disabled": false
}

[node name="TimeLabel" type="Label" parent="TabContainer/Focus Timer/FocusTypes/Free Focus"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
text = "00:00:00"
align = 1
valign = 1

[node name="Focus History" type="Tabs" parent="TabContainer/Focus Timer/FocusTypes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 192 )

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Focus Timer/FocusTypes/Focus History"]
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true

[node name="FocusTasks" type="VBoxContainer" parent="TabContainer/Focus Timer/FocusTypes/Focus History/ScrollContainer"]
unique_name_in_owner = true
margin_right = 755.2
margin_bottom = 203.4
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="save_external_data" from="." to="TabContainer/Focus Timer" method="save_external_data"]
[connection signal="pressed" from="TabContainer/Tasks/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="TabContainer/Notes/VBoxContainer/NewNoteButton" to="." method="_on_NewNoteButton_pressed"]
[connection signal="pressed" from="TabContainer/Focus Timer/StartFocus" to="TabContainer/Focus Timer" method="_on_StartFocus_pressed"]
